# Clock

./: .gitignore  Clocks.sln  ClocksAndElse.sln  README.md  git-commit.txt.bat
ClockAndToolbar/: App.config  ClockAndToolbar.csproj  FMain.Designer.cs  FMain.cs  FMain.resx  FSet.Designer.cs  FSet.cs  Program.cs  cPubFunc.cs
Clock_cs/: AssemblyInfo.cs  Clock_cs.csproj  FAbout.cs  FCalendar.cs  FMain.cs  FMain.resx  FSetup.Designer.cs  FSetup.cs  FShutDown.cs  FShutDown.resx  cPubFunc.cs
Clock_csNC/: FAbout.cs  FSetup.Designer.cs  FShutDown.cs
Clock_csV2/: AssemblyInfo.cs  Clock_cs.csproj  Clock_csV2.csproj  Clock_csV2.sln  FAbout.cs  FCalendar.cs  FMain.cs  FMain.resx  FSetup.Designer.cs  FSetup.cs  cPubFunc.cs  convert.txt
Clock_cs_v2/: Clock_cs_v2.csproj  FAbout.Designer.cs  FAbout.cs  FCalendar.Designer.cs  FCalendar.cs  FMain.Designer.cs  FMain.cs  FMain.resx  FSetup.Designer.cs  FSetup.cs  FShutDown.Designer.cs  FShutDown.cs  Program.cs  cPubFunc.cs
Clock_csc/: App.ico.resx  Clock_csc.csproj  FAbout.cs  FAbout.resx  FCalendar.cs  FMain.cs  FMain.resx  FSetup.Designer.cs  FSetup.cs  FShutDown.cs  cPubFunc.cs  cl.cvp
Clock_csc_v2/: Clock_csc_v2.csproj  FAbout.Designer.cs  FAbout.cs  FAbout.resx  FCalendar.cs  (+12 more)
Clock_qt/: CMakeLists.txt  README.md  main.cpp  make-appimage.sh
Clock_qt/res/: resources.qrc
Clock_qt/src/: AboutDialog.cpp  AboutDialog.h  CalendarDialog.cpp  CalendarDialog.h  MainWindow.cpp  MainWindow.h  SetupDialog.cpp  SetupDialog.h  ShutdownDialog.cpp  ShutdownDialog.h  SystemMonitor.cpp  SystemMonitor.h  WorldMapDialog.cpp  WorldMapDialog.h
(+85 files in other folders)
